Fixing pyproject whitespace

--- a/template_content/{% if use_python_poetry %}pyproject.toml{% endif %}.jinja
+++ b/template_content/{% if use_python_poetry %}pyproject.toml{% endif %}.jinja
@@ -32,7 +32,7 @@ pytest-cov = "^4.0.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-{%- if use_python_ruff -%}
+{% if use_python_ruff %}
 [tool.ruff]
 line-length = 120
 select = ["E", "F", "ANN", "U", "N", "C", "B", "A", "YTT", "M", "W", "FBT", "Q", "RUF", "I"]
@@ -71,15 +71,24 @@ allow-star-arg-any = true
 suppress-none-returning = true
 {% endif %}
 
-{%- if use_python_black -%}
+
+{% if use_python_black %}
 [tool.black]
 line-length = 120
 {% endif %}
 
+{% if use_python_pytest %}
+[tool.pytest.ini_options]
+pythonpath = ["smart_contracts", "tests"]
+{% endif %}
+
+
+{% if not use_python_pytest %}
 [tool.pytest.ini_options]
 pythonpath = ["smart_contracts"]
+{% endif %}
 
-{%- if use_python_mypy -%}
+{% if use_python_mypy %}
 [tool.mypy]
 files = "smart_contracts/"
 python_version = "3.10"
@@ -93,9 +102,4 @@ disallow_untyped_decorators = true
 disallow_any_generics = false
 implicit_reexport = false
 show_error_codes = true
-{% endif %}
-
-{%- if use_python_pytest -%}
-[tool.pytest.ini_options]
-pythonpath = ["src", "tests"]
 {% endif %}
