--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -31,7 +31,12 @@
   "python.analysis.typeCheckingMode": "basic",
   "python.linting.enabled": true,
   "python.linting.lintOnSave": true,
+  {% if python_linter == 'flake8' -%}
+  "python.linting.flake8Enabled": true,
+  {% endif %}
+  {% if python_linter == 'ruff' -%}
   "ruff.importStrategy": "fromEnvironment",
+  {% endif %}
   "python.linting.pylintEnabled": false,
   "python.linting.mypyEnabled": false,
   "mypy.configFile": "pyproject.toml",
@@ -44,6 +49,7 @@
   "python.linting.pycodestyleEnabled": false,
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
+  {% if python_linter == 'ruff' -%}
   "emeraldwalk.runonsave": {
     "commands": [
       // Run Ruff linter on save of Python file
@@ -53,4 +59,5 @@
       }
     ]
   },
+  {% endif %}
 }
