Tweaks to get a really polished experience

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
@@ -8,6 +8,7 @@
     {% endif %}
     "bungcip.better-toml",
     "editorconfig.editorconfig",
-    "matangover.mypy"
+    "matangover.mypy",
+    "runarsf.platform-settings"
   ]
 }
