--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -17,11 +17,19 @@
   },
 
   // Python
-  // Inform VS Code there is an interpreter in the .venv for the workspace
-  // On Windows this doesn't work since it's not in .venv/bin, but rather .venv/Scripts.
-  //    However if you symlink Scripts -> bin it does work!
-  //    If you are on Windows and haven't done that then it's OK it will just prompt you to select a Python interpreter.
-  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+  "platformSettings.autoLoad": true,
+  "platformSettings.platforms": {
+    "default": {
+      "nodes": {
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
+      }
+    },
+    "win32": {
+      "nodes": {
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe"
+      }
+    }
+  },
   "python.analysis.extraPaths": ["${workspaceFolder}/smart_contracts"],
   "python.formatting.provider": "black",
   "[python]": {
@@ -29,6 +37,9 @@
     "editor.defaultFormatter": null
   },
   "python.analysis.typeCheckingMode": "basic",
+  "python.analysis.diagnosticSeverityOverrides": {
+    "reportShadowedImports": "none"
+  },
   "python.linting.enabled": true,
   "python.linting.lintOnSave": true,
   {% if python_linter == 'flake8' -%}
@@ -56,6 +67,11 @@
       {
         "match": "\\.py$",
         "cmd": "${workspaceFolder}/.venv/bin/ruff ${file} --fix"
+      },
+      // Run Ruff linter on save of Python file
+      {
+        "match": "\\.py$",
+        "cmd": "${workspaceFolder}/.venv/scripts/ruff ${file} --fix"
       }
     ]
   },
