--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -47,5 +47,6 @@ This project makes use of Python to build Algorand smart contracts. The followin
 {%- if python_linter == "flake8" -%}
 - [Flake8](https://flake8.pycqa.org/en/latest/): A Python linter for style guide enforcement.
 {% endif %}
+- [mypy](https://mypy-lang.org/): Static type checker.
 
 It has also been configured to have a productive dev experience out of the box in VS Code, see the [.vscode](./.vscode) folder.
