fix: Set `python.analysis.indexing` to true explicitly in case users have it to false in their default settings
Reported via Discord

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -30,6 +30,7 @@
       }
     }
   },
+  "python.analysis.indexing": true,
   "python.analysis.extraPaths": ["${workspaceFolder}/smart_contracts"],
   "python.formatting.provider": "black",
   "[python]": {
