--- a/template_content/pyproject.toml.jinja
+++ b/template_content/pyproject.toml.jinja
@@ -37,7 +37,7 @@ build-backend = "poetry.core.masonry.api"
 {% if python_linter == 'ruff' -%}
 [tool.ruff]
 select = ["E", "F", "ANN", "UP", "N", "C", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
-ignore = ["ANN101", "C901"]
+ignore = ["ANN101", "C901", "F403", "F405"]
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
