fix: use explicit platform settings for Mac OS and linux

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -19,7 +19,12 @@
   // Python
   "platformSettings.autoLoad": true,
   "platformSettings.platforms": {
-    "default": {
+    "linux": {
+      "nodes": {
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
+      }
+    },
+    "darwin": {
       "nodes": {
         "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
       }
