Adding RemoteSigned to windows terminal to fix execution policy errors

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -82,4 +82,7 @@
     ]
   },
   {% endif %}
+  // On Windows, if execution policy is set to Signed (default) then it won't be able to activate the venv
+  //  so instead let's set it to RemoteSigned for VS Code terminal
+  "terminal.integrated.shellArgs.windows": ["-ExecutionPolicy", "RemoteSigned"],
 }
