fix: remove platform settings from vs code

--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -18,7 +18,11 @@ This project has been generated using AlgoKit. See below for default getting sta
      1. Open the repository root in VS Code
      2. Install recommended extensions
      3. Hit F5 (or whatever you have debug mapped to) and it should start running with breakpoint debugging.
-        (**NOTE:** The first time you run, VS Code may prompt you to select the Python Interpreter. Select python from the .venv path within this project)
+        > **Note**
+        > If using Windows: Before running for the first time you will need to select the Python Interpreter.
+        1. Open the command palette (Ctrl + P)
+        2. Search for `Python: Select Interpreter`
+        3. Select `./.venv/Scripts/python.exe`
    - IDEA (e.g. PyCharm)
      1. Open the repository root in the IDE
      2. It should automatically detect it's a Poetry project and set up a Python interpreter and virtual environment.
