--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
@@ -7,7 +7,6 @@
     {% endif %}
     "bungcip.better-toml",
     "editorconfig.editorconfig",
-    "matangover.mypy",
-    "runarsf.platform-settings"
+    "matangover.mypy"
   ]
 }
