--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -17,26 +17,9 @@
   },
 
   // Python
-  "platformSettings.autoLoad": true,
-  "platformSettings.platforms": {
-    "linux": {
-      "nodes": {
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
-      }
-    },
-    "darwin": {
-      "nodes": {
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
-      }
-    },
-    "win32": {
-      "nodes": {
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe"
-      }
-    }
-  },
   "python.analysis.indexing": true,
   "python.analysis.extraPaths": ["${workspaceFolder}/smart_contracts"],
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
   "python.formatting.provider": "black",
   "[python]": {
     // https://dev.to/eegli/quick-guide-to-python-formatting-in-vs-code-2040
