feat(deploy): Added TypeScript deployment option

--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -6,7 +6,9 @@ from dotenv import load_dotenv
 
 from smart_contracts import config
 from smart_contracts.helpers.build import build
+{%- if deployment_language == 'python' -%}
 from smart_contracts.helpers.deploy import deploy
+{% endif %}
 
 logging.basicConfig(
     level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s"
@@ -24,6 +26,7 @@ def main(action: str) -> None:
             for app in config.contracts:
                 logger.info(f"Building app {app.name}")
                 build(artifact_path / app.name, app)
+{%- if deployment_language == 'python' -%}
         case "deploy":
             for app in config.contracts:
                 logger.info(f"Building app {app.name}")
@@ -35,10 +38,14 @@ def main(action: str) -> None:
                 app_spec_path = build(artifact_path / app.name, app)
                 logger.info(f"Deploying {app.name}")
                 deploy(app_spec_path, config.deploy)
-
+{% endif %}
 
 if __name__ == "__main__":
     if len(sys.argv) > 1:
         main(sys.argv[1])
     else:
+{%- if deployment_language == 'python' -%}
         main("all")
+{%- else -%}
+        main("build")
+{% endif %}
