--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
@@ -4,9 +4,10 @@
     {% if python_linter == 'ruff' -%}
     "charliermarsh.ruff",
     "emeraldwalk.runonsave",
-    {% endif %}
+    {%- endif -%}
     "bungcip.better-toml",
     "editorconfig.editorconfig",
-    "matangover.mypy"
+    "matangover.mypy",
+    "esbenp.prettier-vscode"
   ]
 }
