--- a/template_content/smart_contracts/config.py.jinja
+++ b/template_content/smart_contracts/config.py.jinja
@@ -1,5 +1,6 @@
 import logging
 
+{% if deployment_language == 'python' -%}
 from algokit_utils.account import Account
 from algokit_utils.app import DeployAction, OnSchemaBreak, OnUpdate, deploy_app
 from algokit_utils.application_specification import ApplicationSpecification
@@ -8,6 +9,7 @@ from algokit_utils.transfer import TransferParameters, transfer
 from algosdk.util import algos_to_microalgos
 from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
+{% endif %}
 
 from smart_contracts.helloworld import app as helloworld_app
 
@@ -16,7 +18,7 @@ logger = logging.getLogger(__name__)
 # define contracts to build and/or deploy
 contracts = [helloworld_app]
 
-
+{% if deployment_language == 'python' -%}
 # define deployment behaviour based on supplied app spec
 def deploy(
     algod_client: AlgodClient,
@@ -53,3 +55,4 @@ def deploy(
                     f"New app created, funding with {transfer_parameters.amount}µ algos"
                 )
                 transfer(transfer_parameters, algod_client)
+{% endif %}
