--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
@@ -10,6 +10,6 @@
     "matangover.mypy",
     {% if deployment_language == 'typescript' -%}
     "esbenp.prettier-vscode"
-    {% endif -%}
+    {%- endif %}
   ]
 }
