--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -26,7 +26,7 @@ def main(action: str) -> None:
             for app in config.contracts:
                 logger.info(f"Building app {app.name}")
                 build(artifact_path / app.name, app)
-{% if deployment_language == 'python' -%}
+{% if deployment_language == 'python' %}
         case "deploy":
             for app in config.contracts:
                 logger.info(f"Building app {app.name}")
