--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json.jinja
@@ -22,18 +22,24 @@
     {% if deployment_language == 'typescript' -%}
     {
       "name": "Build & Deploy Beaker application",
-      "type": "node-terminal",
+      "type": "node",
       "request": "launch",
-      "command": "npm run deploy",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "deploy"],
       "cwd": "${workspaceFolder}/smart_contracts",
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**", "node_modules/**"],
       "preLaunchTask": "Build Beaker application (+ LocalNet)"
     },
     {
       "name": "Deploy Built Beaker application",
-      "type": "node-terminal",
+      "type": "node",
       "request": "launch",
-      "command": "npm run deploy",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "deploy"],
       "cwd": "${workspaceFolder}/smart_contracts",
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**", "node_modules/**"],
     },
     {% endif %}
     {
