--- a/template_content/pyproject.toml.jinja
+++ b/template_content/pyproject.toml.jinja
@@ -7,37 +7,50 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-beaker-pyteal = "^0.5.0"
+beaker-pyteal = "1.0.0b2"
+algokit-utils = "0.1.1"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 {% if use_python_pip_audit -%}
-pip-audit = "^2.4.5"
+pip-audit = "*"
 {% endif %}
 {%- if use_python_black -%}
-black = {extras = ["d"], version = "^22.10.0"}
+black = {extras = ["d"], version = "*"}
 {% endif %}
 {%- if python_linter == 'ruff' -%}
-ruff = "^0.0.171"
+ruff = "0.0.252"
 {% endif %}
 {%- if python_linter == 'flake8' -%}
-flake8 = "^6.0.0"
+flake8 = "*"
 {% endif %}
 {%- if use_python_mypy -%}
-mypy = "^0.991"
+mypy = "*"
 {% endif %}
 {%- if use_python_pytest -%}
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
+pytest = "*"
+pytest-cov = "*"
 {% endif %}
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+{% if use_python_black -%}
+[tool.black]
+line-length = 120
+{% endif %}
+
 {% if python_linter == 'ruff' -%}
 [tool.ruff]
 select = ["E", "F", "ANN", "UP", "N", "C", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
-ignore = ["ANN101", "C901"]
+ignore = [
+  "ANN101", # missing type for self parameter
+  "C901",
+{% if use_python_black -%}
+  "E501", # line too long - black takes care of this for us
+{% endif %}
+]
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
@@ -80,14 +93,9 @@ pythonpath = ["smart_contracts", "tests"]
 [tool.mypy]
 files = "smart_contracts/"
 python_version = "3.10"
-warn_unused_ignores = true
+check_untyped_defs = true
 warn_redundant_casts = true
-warn_unused_configs = true
-warn_unreachable = true
-warn_return_any = true
-strict = true
-disallow_untyped_decorators = true
-disallow_any_generics = false
-implicit_reexport = false
-show_error_codes = true
+warn_unused_ignores = true
+allow_untyped_defs = false
+strict_equality = true
 {% endif %}
