--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -16,33 +16,21 @@
     ".idea": true
   },
 
+  {% if deployment_language == 'typescript' -%}
+  // TypeScript
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  {% endif %}
+
   // Python
-  "platformSettings.autoLoad": true,
-  "platformSettings.platforms": {
-    "linux": {
-      "nodes": {
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
-      }
-    },
-    "darwin": {
-      "nodes": {
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
-      }
-    },
-    "win32": {
-      "nodes": {
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe"
-      }
-    }
-  },
   "python.analysis.indexing": true,
   "python.analysis.extraPaths": ["${workspaceFolder}/smart_contracts"],
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
   "python.formatting.provider": "black",
   "[python]": {
     // https://dev.to/eegli/quick-guide-to-python-formatting-in-vs-code-2040
     "editor.defaultFormatter": null
   },
-  "python.analysis.typeCheckingMode": "basic",
+  "python.analysis.typeCheckingMode": "off",
   "python.analysis.diagnosticSeverityOverrides": {
     "reportShadowedImports": "none"
   },
@@ -82,4 +70,7 @@
     ]
   },
   {% endif %}
+  // On Windows, if execution policy is set to Signed (default) then it won't be able to activate the venv
+  //  so instead let's set it to RemoteSigned for VS Code terminal
+  "terminal.integrated.shellArgs.windows": ["-ExecutionPolicy", "RemoteSigned"],
 }
