--- a/template_content/smart_contracts/config.py.jinja
+++ b/template_content/smart_contracts/config.py.jinja
@@ -15,7 +15,7 @@ from algokit_utils import (
 from algosdk.util import algos_to_microalgos
 from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
-{% endif -%}
+{%- endif %}
 
 from smart_contracts.helloworld import app as helloworld_app
 
@@ -23,6 +23,7 @@ logger = logging.getLogger(__name__)
 
 # define contracts to build and/or deploy
 contracts = [helloworld_app]
+
 
 {% if deployment_language == 'python' -%}
 # define deployment behaviour based on supplied app spec
@@ -32,7 +33,6 @@ def deploy(
     app_spec: ApplicationSpecification,
     deployer: Account,
 ) -> None:
-
     is_local = is_sandbox(algod_client)
     match app_spec.contract.name:
         case "HelloWorldApp":
@@ -68,5 +68,4 @@ def deploy(
             )
         case _:
             raise Exception(f"Attempt to deploy unknown contract {app_spec.contract.name}")
-
-{% endif %}
+{% endif -%}
