--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -6,13 +6,16 @@ This project has been generated using AlgoKit. See below for default getting sta
 
 ### Initial setup
 
-1. Clone this repository: `git clone {repository_url}`
+1. Clone this repository locally
 2. Install pre-requisites:
-   - If you have AlgoKit installed, run `algokit bootstrap poetry` within this folder;
-   - or:
-     - Install `Python` - [Link](https://www.python.org/downloads/): The minimum required version is `3.10`. Ensure you can execute `python -V` and get `3.10`+.
-     - Install `Poetry` - [Link](https://python-poetry.org/docs/#installation): The minimum required version is `1.2`. Ensure you can execute `poetry -V` and get `1.2`+.
-     - If you're not using PyCharm, then run `poetry install` in the root directory (this should set up `.venv` and also install all Python dependencies) - PyCharm will do this for you automatically on startup 🪄.
+   - Install `AlgoKit` - [Link](https://github.com/algorandfoundation/algokit-cli#install): Ensure you can execute `algokit --version`.
+   - Bootstrap your local environment; run `algokit bootstrap all` within this folder, which will:
+     - Install `Poetry` - [Link](https://python-poetry.org/docs/#installation): The minimum required version is `1.2`. Ensure you can execute `poetry -V` and get `1.2`+
+     - Run `poetry install` in the root directory, which will set up a `.venv` folder with a Python virtual environment and also install all Python dependencies
+     - Copy `.env.template` to `.env`
+{%- if deployment_language == "typescript" %}
+     - Run `npm install` in `smart_contracts` to install NPM packages
+{% endif -%}
 3. Open the project and start debugging / developing via:
    - VS Code
      1. Open the repository root in VS Code
@@ -20,7 +23,7 @@ This project has been generated using AlgoKit. See below for default getting sta
      3. Hit F5 (or whatever you have debug mapped to) and it should start running with breakpoint debugging.
         > **Note**
         > If using Windows: Before running for the first time you will need to select the Python Interpreter.
-        1. Open the command palette (Ctrl + P)
+        1. Open the command palette (Ctrl/Cmd + Shift + P)
         2. Search for `Python: Select Interpreter`
         3. Select `./.venv/Scripts/python.exe`
    - IDEA (e.g. PyCharm)
@@ -34,7 +37,7 @@ This project has been generated using AlgoKit. See below for default getting sta
 
 ### Subsequently
 
-1. If you update to the latest source code and there are new dependencies you will need to run `poetry install` again
+1. If you update to the latest source code and there are new dependencies you will need to run `algokit bootstrap all` again
 2. Follow step 3 above
 
 # Tools
@@ -52,5 +55,10 @@ This project makes use of Python to build Algorand smart contracts. The followin
 - [Flake8](https://flake8.pycqa.org/en/latest/): A Python linter for style guide enforcement.
 {% endif %}
 - [mypy](https://mypy-lang.org/): Static type checker.
+{%- if deployment_language == "typescript" %}
+- [npm](https://www.npmjs.com/): Node.js package manager
+- [TypeScript](https://www.typescriptlang.org/): Strongly typed programming language that builds on JavaScript
+- [ts-node-dev](https://github.com/wclr/ts-node-dev): TypeScript development execution environment
+{% endif -%}
 
 It has also been configured to have a productive dev experience out of the box in VS Code, see the [.vscode](./.vscode) folder.
