--- a/template_content/smart_contracts/config.py.jinja
+++ b/template_content/smart_contracts/config.py.jinja
@@ -43,7 +43,9 @@ def deploy(
                 indexer_client=indexer_client,
             )
             deploy_response = app_client.deploy(
-                on_schema_break=OnSchemaBreak.ReplaceApp if is_local else OnSchemaBreak.Fail,
+                on_schema_break=OnSchemaBreak.ReplaceApp
+                if is_local
+                else OnSchemaBreak.Fail,
                 on_update=OnUpdate.UpdateApp if is_local else OnUpdate.Fail,
                 allow_delete=is_local,
                 allow_update=is_local,
@@ -55,9 +57,13 @@ def deploy(
                 OperationPerformed.Replace,
             ]:
                 transfer_parameters = TransferParameters(
-                    from_account=deployer, to_address=app_client.app_address, amount=algos_to_microalgos(10)
+                    from_account=deployer,
+                    to_address=app_client.app_address,
+                    amount=algos_to_microalgos(10),
                 )
-                logger.info(f"New app created, funding with {transfer_parameters.amount}µ algos")
+                logger.info(
+                    f"New app created, funding with {transfer_parameters.amount}µ algos"
+                )
                 transfer(transfer_parameters, algod_client)
 
             method = "hello"
@@ -67,5 +73,7 @@ def deploy(
                 f"Called {method} on {app_spec.contract.name} ({app_client.app_id}) with args={args}, received: {response.abi_result.return_value}"
             )
         case _:
-            raise Exception(f"Attempt to deploy unknown contract {app_spec.contract.name}")
+            raise Exception(
+                f"Attempt to deploy unknown contract {app_spec.contract.name}"
+            )
 {% endif -%}
