--- a/template_content/smart_contracts/config.py.jinja
+++ b/template_content/smart_contracts/config.py.jinja
@@ -43,9 +43,7 @@ def deploy(
                 indexer_client=indexer_client,
             )
             deploy_response = app_client.deploy(
-                on_schema_break=OnSchemaBreak.ReplaceApp
-                if is_local
-                else OnSchemaBreak.Fail,
+                on_schema_break=OnSchemaBreak.ReplaceApp if is_local else OnSchemaBreak.Fail,
                 on_update=OnUpdate.UpdateApp if is_local else OnUpdate.Fail,
                 allow_delete=is_local,
                 allow_update=is_local,
@@ -59,21 +57,16 @@ def deploy(
                 transfer_parameters = TransferParameters(
                     from_account=deployer,
                     to_address=app_client.app_address,
-                    amount=algos_to_microalgos(10),
+                    micro_algos=algos_to_microalgos(10),
                 )
-                logger.info(
-                    f"New app created, funding with {transfer_parameters.amount}µ algos"
-                )
-                transfer(transfer_parameters, algod_client)
+                logger.info(f"New app created, funding with {transfer_parameters.micro_algos}µ algos")
+                transfer(algod_client, transfer_parameters)
 
-            method = "hello"
-            args = {"name": "world"}
-            response = app_client.call(method, args=args)
+            name = "world"
+            response = app_client.call("hello", name=name)
             logger.info(
-                f"Called {method} on {app_spec.contract.name} ({app_client.app_id}) with args={args}, received: {response.abi_result.return_value}"
+                f"Called hello on {app_spec.contract.name} ({app_client.app_id}) with name={name}, received: {response.return_value}"
             )
         case _:
-            raise Exception(
-                f"Attempt to deploy unknown contract {app_spec.contract.name}"
-            )
+            raise Exception(f"Attempt to deploy unknown contract {app_spec.contract.name}")
 {% endif -%}
