chore: fix template whitespace

--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -15,7 +15,7 @@ This project has been generated using AlgoKit. See below for default getting sta
      - Copy `.env.template` to `.env`
 {%- if deployment_language == "typescript" %}
      - Run `npm install` in `smart_contracts` to install NPM packages
-{% endif -%}
+{% endif %}
 3. Open the project and start debugging / developing via:
    - VS Code
      1. Open the repository root in VS Code
