fix: ensure venv is selected in a cross-platform manner (fixes algokit-cli#237 for production template)
fix: restore default line lengths

fix: ensure VSCode settings make sense for different options

fix: set a minimum version for ruff, if enabled

fix: prefer-active-python breaks initial setup of this repo itself

fix: follow beaker, pyteal, and SC import conventions

--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -55,8 +55,7 @@ This project makes use of Python to build Algorand smart contracts. The followin
 {% endif %}
 {%- if python_linter == "ruff" -%}
 - [Ruff](https://github.com/charliermarsh/ruff): An extremely fast Python linter.
-{% endif %}
-{%- if python_linter == "flake8" -%}
+{% elif python_linter == "flake8" -%}
 - [Flake8](https://flake8.pycqa.org/en/latest/): A Python linter for style guide enforcement.
 {% endif %}
 - [mypy](https://mypy-lang.org/): Static type checker.
