--- a/template_content/smart_contracts/config.py.jinja
+++ b/template_content/smart_contracts/config.py.jinja
@@ -1,6 +1,5 @@
 import logging
-
-{% if deployment_language == 'python' -%}
+{% if deployment_language == 'python' %}
 from algokit_utils import (
     Account,
     ApplicationClient,
@@ -15,17 +14,15 @@ from algokit_utils import (
 from algosdk.util import algos_to_microalgos
 from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
-{%- endif %}
-
-from smart_contracts.helloworld import app as helloworld_app
+{% endif %}
+from smart_contracts import helloworld
 
 logger = logging.getLogger(__name__)
 
 # define contracts to build and/or deploy
-contracts = [helloworld_app]
+contracts = [helloworld.app]
+{% if deployment_language == 'python' %}
 
-
-{% if deployment_language == 'python' -%}
 # define deployment behaviour based on supplied app spec
 def deploy(
     algod_client: AlgodClient,
@@ -43,7 +40,9 @@ def deploy(
                 indexer_client=indexer_client,
             )
             deploy_response = app_client.deploy(
-                on_schema_break=OnSchemaBreak.ReplaceApp if is_local else OnSchemaBreak.Fail,
+                on_schema_break=(
+                    OnSchemaBreak.ReplaceApp if is_local else OnSchemaBreak.Fail
+                ),
                 on_update=OnUpdate.UpdateApp if is_local else OnUpdate.Fail,
                 allow_delete=is_local,
                 allow_update=is_local,
@@ -59,14 +58,20 @@ def deploy(
                     to_address=app_client.app_address,
                     micro_algos=algos_to_microalgos(10),
                 )
-                logger.info(f"New app created, funding with {transfer_parameters.micro_algos}µ algos")
+                logger.info(
+                    f"New app created, funding with "
+                    f"{transfer_parameters.micro_algos}µ algos"
+                )
                 transfer(algod_client, transfer_parameters)
 
             name = "world"
             response = app_client.call("hello", name=name)
             logger.info(
-                f"Called hello on {app_spec.contract.name} ({app_client.app_id}) with name={name}, received: {response.return_value}"
+                f"Called hello on {app_spec.contract.name} ({app_client.app_id}) "
+                f"with name={name}, received: {response.return_value}"
             )
         case _:
-            raise Exception(f"Attempt to deploy unknown contract {app_spec.contract.name}")
+            raise Exception(
+                f"Attempt to deploy unknown contract {app_spec.contract.name}"
+            )
 {% endif -%}
