--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/extensions.json.jinja
@@ -3,13 +3,16 @@
     "ms-python.python",
     {% if python_linter == 'ruff' -%}
     "charliermarsh.ruff",
-    "emeraldwalk.runonsave",
+    {% elif python_linter == 'flake8' -%}
+    "ms-python.flake8",
+    {% endif -%}
+    {% if use_python_mypy -%}
+    "matangover.mypy",
+    {% endif -%}
+    {% if deployment_language == 'typescript' -%}
+    "esbenp.prettier-vscode",
     {% endif -%}
     "bungcip.better-toml",
-    "editorconfig.editorconfig",
-    "matangover.mypy",
-    {% if deployment_language == 'typescript' -%}
-    "esbenp.prettier-vscode"
-    {%- endif %}
+    "editorconfig.editorconfig"
   ]
 }
