--- a/template_content/pyproject.toml.jinja
+++ b/template_content/pyproject.toml.jinja
@@ -12,84 +12,46 @@ algokit-utils = "^1.0.1"
 python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
+{% if use_python_black -%}
+black = {extras = ["d"], version = "*"}
+{% endif -%}
+{% if python_linter == 'ruff' -%}
+ruff = ">=0.0.260"
+{% elif python_linter == 'flake8' -%}
+flake8 = "*"
+{% endif -%}
+{% if use_python_mypy -%}
+mypy = "*"
+{% endif -%}
+{% if use_python_pytest -%}
+pytest = "*"
+pytest-cov = "*"
+{% endif -%}
 {% if use_python_pip_audit -%}
 pip-audit = "*"
 {% endif %}
-{%- if use_python_black -%}
-black = {extras = ["d"], version = "*"}
-{% endif %}
-{%- if python_linter == 'ruff' -%}
-ruff = "0.0.252"
-{% endif %}
-{%- if python_linter == 'flake8' -%}
-flake8 = "*"
-{% endif %}
-{%- if use_python_mypy -%}
-mypy = "*"
-{% endif %}
-{%- if use_python_pytest -%}
-pytest = "*"
-pytest-cov = "*"
-{% endif %}
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-{% if use_python_black -%}
-[tool.black]
-line-length = 120
-{% endif %}
-
 {% if python_linter == 'ruff' -%}
 [tool.ruff]
-select = ["E", "F", "ANN", "UP", "N", "C", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
+select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
 ignore = [
-  "ANN101", # missing type for self parameter
-  "C901",
-{% if use_python_black -%}
-  "E501", # line too long - black takes care of this for us
-{% endif %}
+  "ANN101", # no type for self
+  "ANN102", # no type for cls
 ]
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".hg",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
-]
-per-file-ignores = {}
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-# Assume Python 3.10.
-target-version = "py310"
+unfixable = ["B", "RUF"]
 
 [tool.ruff.flake8-annotations]
 allow-star-arg-any = true
 suppress-none-returning = true
-{% endif %}
-
-{% if use_python_pytest -%}
+{% endif -%}
+{% if use_python_pytest %}
 [tool.pytest.ini_options]
 pythonpath = ["smart_contracts", "tests"]
-{% endif %}
-
-{% if use_python_mypy -%}
+{% endif -%}
+{% if use_python_mypy %}
 [tool.mypy]
 files = "smart_contracts/"
 python_version = "3.10"
@@ -98,4 +60,4 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 allow_untyped_defs = false
 strict_equality = true
-{% endif %}
+{% endif -%}
