--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -9,7 +9,9 @@ from smart_contracts.helpers.build import build
 {% if deployment_language == 'python' -%}
 from smart_contracts.helpers.deploy import deploy
 {% endif %}
-logging.basicConfig(level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s")
+logging.basicConfig(
+    level=logging.DEBUG, format="%(asctime)s %(levelname)-10s: %(message)s"
+)
 logger = logging.getLogger(__name__)
 logger.info("Loading .env")
 load_dotenv()
@@ -23,7 +25,7 @@ def main(action: str) -> None:
             for app in config.contracts:
                 logger.info(f"Building app {app.name}")
                 build(artifact_path / app.name, app)
-{% if deployment_language == 'python' %}
+        {%- if deployment_language == 'python' %}
         case "deploy":
             for app in config.contracts:
                 logger.info(f"Building app {app.name}")
@@ -35,14 +37,11 @@ def main(action: str) -> None:
                 app_spec_path = build(artifact_path / app.name, app)
                 logger.info(f"Deploying {app.name}")
                 deploy(app_spec_path, config.deploy)
-{% endif %}
+        {%- endif %}
+
 
 if __name__ == "__main__":
     if len(sys.argv) > 1:
         main(sys.argv[1])
     else:
-{%- if deployment_language == 'python' %}
-        main("all")
-{% else %}
-        main("build")
-{% endif -%}
+        main("{{ 'all' if deployment_language == 'python' else 'build' }}")
