--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -1,10 +1,6 @@
 {
   // General - see also /.editorconfig
   "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    // Don't want to use isort because it conflicts with Ruff - see run on save below
-    "source.organizeImports": false
-  },
   "files.exclude": {
     "**/.git": true,
     "**/.DS_Store": true,
@@ -15,60 +11,39 @@
     "**/__pycache__": true,
     ".idea": true
   },
-
-  {% if deployment_language == 'typescript' -%}
+  {% if deployment_language == 'typescript' %}
   // TypeScript
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   {% endif %}
-
   // Python
-  "python.analysis.indexing": true,
   "python.analysis.extraPaths": ["${workspaceFolder}/smart_contracts"],
-  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-  "python.formatting.provider": "black",
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
   "[python]": {
-    // https://dev.to/eegli/quick-guide-to-python-formatting-in-vs-code-2040
+    "editor.codeActionsOnSave": {
+      "source.fixAll": true,
+      "source.organizeImports": true
+    },
     "editor.defaultFormatter": null
   },
-  "python.analysis.typeCheckingMode": "off",
-  "python.analysis.diagnosticSeverityOverrides": {
-    "reportShadowedImports": "none"
-  },
-  "python.linting.enabled": true,
-  "python.linting.lintOnSave": true,
+  {% if use_python_pytest -%}
+  "python.testing.pytestEnabled": true,
+  {% endif -%}
+  {% if use_python_black -%}
+  "python.formatting.provider": "black",
+  {% endif -%}
+  {% if python_linter != 'none' -%}
+  "python.linting.pylintEnabled": false,
+  {% endif -%}
   {% if python_linter == 'flake8' -%}
   "python.linting.flake8Enabled": true,
-  {% endif %}
-  {% if python_linter == 'ruff' -%}
-  "ruff.importStrategy": "fromEnvironment",
-  {% endif %}
-  "python.linting.pylintEnabled": false,
-  "python.linting.mypyEnabled": false,
+  "flake8.importStrategy": "fromEnvironment",
+  {% endif -%}
+  {% if use_python_mypy -%}
+  "python.analysis.typeCheckingMode": "off",
   "mypy.configFile": "pyproject.toml",
   // set to empty array to use config from project
   "mypy.targets": [],
   "mypy.runUsingActiveInterpreter": true,
-  "python.linting.banditEnabled": false,
-  "python.linting.prospectorEnabled": false,
-  "python.linting.pydocstyleEnabled": false,
-  "python.linting.pycodestyleEnabled": false,
-  "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true,
-  {% if python_linter == 'ruff' -%}
-  "emeraldwalk.runonsave": {
-    "commands": [
-      // Run Ruff linter on save of Python file
-      {
-        "match": "\\.py$",
-        "cmd": "${workspaceFolder}/.venv/bin/ruff ${file} --fix"
-      },
-      // Run Ruff linter on save of Python file
-      {
-        "match": "\\.py$",
-        "cmd": "${workspaceFolder}/.venv/scripts/ruff ${file} --fix"
-      }
-    ]
-  },
   {% endif %}
   // On Windows, if execution policy is set to Signed (default) then it won't be able to activate the venv
   //  so instead let's set it to RemoteSigned for VS Code terminal
