--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/settings.json.jinja
@@ -21,7 +21,7 @@
   "[python]": {
     "editor.codeActionsOnSave": {
       "source.fixAll": true,
-      # Prevent default import sorting from running; Ruff will sort imports for us anyway
+      // Prevent default import sorting from running; Ruff will sort imports for us anyway
       "source.organizeImports": false
     },
     "editor.defaultFormatter": null
