--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -28,7 +28,7 @@ def main(action: str) -> None:
         {%- if deployment_language == 'python' %}
         case "deploy":
             for app in config.contracts:
-                logger.info(f"Building app {app.name}")
+                logger.info(f"Deploying app {app.name}")
                 app_spec_path = artifact_path / app.name / "application.json"
                 deploy(app_spec_path, config.deploy)
         case "all":
