--- a/template_content/pyproject.toml.jinja
+++ b/template_content/pyproject.toml.jinja
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 beaker-pyteal = "^1.0.0"
-algokit-utils = "^1.0.1"
+algokit-utils = "^1.1.0b3"
 python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
