--- a/template_content/smart_contracts/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
+++ b/template_content/smart_contracts/{% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
@@ -5,7 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config index.ts",
+{%- if use_github_actions %}
     "deploy:ci": "ts-node --transpile-only -r dotenv/config index.ts",
+{%- endif %}
     "format": "prettier --write ."
   },
   "dependencies": {
