--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/check-python.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/check-python.yaml.jinja
@@ -93,7 +93,7 @@ jobs:
 
       - name: Run deployer against LocalNet
 {%- if deployment_language == 'typescript' %}
-        run: npm run deploy
+        run: npm run --prefix smart_contracts deploy:ci
 {%- elif deployment_language == 'python' %}
         run: poetry run python -m smart_contracts deploy
 {%- endif %}
