--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  check-python:
+  checks:
     runs-on: 'ubuntu-latest'
     steps:
       - name: Checkout source code
