tests: update approvals

--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -94,7 +94,7 @@ For pull requests and pushes to `main` branch against this repository the follow
  - Smart contract artifacts are checked for [output stability](https://github.com/algorandfoundation/algokit-cli/blob/main/docs/articles/output_stability.md)
  - Smart contract is deployed to a AlgoKit LocalNet instance
 
-### Continuous Deployment
+#### Continuous Deployment
 
 For pushes to `main` branch, after the above checks pass, the following deployment actions are performed:
   - The smart contract(s) are deployed to TestNet using [AlgoNode](https://algonode.io).
